@@ -1,13 +1,14 @@
 {
     "id": "fidwell.scenery_group.sixflags_dkso",
     "authors": ["fidwell"],
-    "version": "2.0",
+    "version": "3.0",
     "originalId": "0C58B507|TAB6FLAG|76FC215E",
     "sourceGame": "custom",
     "objectType": "scenery_group",
     "properties": {
         "entries": [
             "rct2.scenery_large.glthent",
+            "fidwell.scenery_large.glthent",
             "rct2.scenery_large.mdsaent",
             "$DAT:0C58B202|IRMDSAC ",
             "rct2.scenery_large.nitroent",
